# qprompts

./: justfile  pyproject.toml
prompts/: review.qmd
src/prompts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/qp/: cli.py  utils.py
src/qp/prompts/: commit.qmd  debug.qmd  edit.qmd  explain.qmd  howto.qmd  outline.qmd  refine.qmd  reprex.qmd  review.qmd  write.qmd
src/qp/templates/: debug.md.jinja  edit.md.jinja  explain.md.jinja  issue.md.jinja  pr.md.jinja  refine.md.jinja  reprex.md.jinja  review.md.jinja  rewrite.md.jinja  summarize.md.jinja  tutorial.md.jinja
